--- a/views/layouts/main.ejs
+++ b/views/layouts/main.ejs
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="/styles/register_leagues.css">
     <link rel="stylesheet" href="/styles/login_viewers.css">
     <link rel="stylesheet" href="/styles/login_clubs.css">
+    <link rel="stylesheet" href="/styles/match_setup.css">
     <link rel="stylesheet" href="/styles/login_leagues.css">
     <title>Crossfit</title>
 </head>
