--- a/views/register_leagues.ejs
+++ b/views/register_leagues.ejs
@@ -13,7 +13,7 @@
                  <div class="register-leagues-form-group">
                     <label for="register-leagues-sport" class="register-club-label">Sport:</label>
                     <select id="register-leagues-founder-register" class="register-leagues-input" name="sport" required>
-                        <option>--select--</option>
+                       <option  disabled selected >--select--</option>
                         <option value="cricket">🏏 Cricket</option>
                         <option value="football">⚽ Football</option>
                         <option value="basketball">🏀 Basketball</option>
