--- a/views/layouts/main.ejs
+++ b/views/layouts/main.ejs
@@ -30,5 +30,6 @@
     <script src="/script/club_dashboard.js"></script>
     <script src="/script/viewer_dashboard.js"></script>
     <script src="/script/header.js"></script>
+    <script src="/script/match_setup.js"></script>
 </body>
 </html>
