--- a/views/merchandise.ejs
+++ b/views/merchandise.ejs
@@ -162,7 +162,7 @@
                     </div>
                     <div class="product-info">
                         <h3 class="product-name">${product.name}</h3>
-                        <div class="product-price">$${product.price.toFixed(2)}</div>
+                        <div class="product-price">₹${product.price.toFixed(2)}</div>
                         <p class="product-description">${product.description}</p>
                         <div class="size-selector">
                             <label>Size:</label>
