added cricket cap

--- a/views/merchandise.ejs
+++ b/views/merchandise.ejs
@@ -76,7 +76,7 @@
             },
             {
                 id: 3,
-                name: "Team Baseball Cap",
+                name: "Team Cricket Cap",
                 price: 450.00,
                 category: "accessories",
                 description: "Adjustable team cap with embroidered logo and comfortable fit",
