live score update setup created j

--- a/views/layouts/main.ejs
+++ b/views/layouts/main.ejs
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="/styles/login_viewers.css">
     <link rel="stylesheet" href="/styles/login_clubs.css">
     <link rel="stylesheet" href="/styles/match_setup.css">
+    <link rel="stylesheet" href="/styles/update_score.css">
     <link rel="stylesheet" href="/styles/login_leagues.css">
     <title>Crossfit</title>
 </head>
@@ -31,5 +32,6 @@
     <script src="/script/viewer_dashboard.js"></script>
     <script src="/script/header.js"></script>
     <script src="/script/match_setup.js"></script>
+    <script src="/script/update_score.js"></script>
 </body>
 </html>
