--- a/views/club_dashboard.ejs
+++ b/views/club_dashboard.ejs
@@ -432,7 +432,7 @@
                 <% if ( match.matchId.bowler) { %>
                   <%= match.matchId.bowler.name %>
                     - <%= match.matchId.bowler_score.wickets %>/<%= match.matchId.bowler_score.runs %> in <%=
-                          match.matchId.bowler_score.wickets.overs %> overs
+                          match.matchId.bowler_score.overs %> overs
               </p>
               <% } %>
 
