Live Scoreboard page is availabel and it's actually live

--- a/views/layouts/main.ejs
+++ b/views/layouts/main.ejs
@@ -20,6 +20,8 @@
     <link rel="stylesheet" href="/styles/match_setup.css">
     <link rel="stylesheet" href="/styles/update_score.css">
     <link rel="stylesheet" href="/styles/login_leagues.css">
+    <link rel="stylesheet" href="/styles/live_score.css">
+    <link rel="stylesheet" href="/styles/specific_scorecard.css">
     <title>Crossfit</title>
 </head>
 <body>
@@ -33,5 +35,7 @@
     <script src="/script/header.js"></script>
     <script src="/script/match_setup.js"></script>
     <script src="/script/update_score.js"></script>
+    <script src="/script/live_score.js"></script>
+    <script src="/script/specific_scorecard.js"></script>
 </body>
 </html>
