minor Bugs Fixed

--- a/views/update_score.ejs
+++ b/views/update_score.ejs
@@ -346,7 +346,7 @@
                                 <p class="match-completed-message">
                                     The match has ended. You can now view the final scoreboard and match summary.
                                 </p>
-                                <a href="/match/scoreboard/<%= thismatch._id %>" class="match-completed-link">📊 View
+                                <a href="/live_scores/scorecard/<%= thismatch._id %>" class="match-completed-link">📊 View
                                     Scoreboard</a>
                             </div>
                             <% } %>
