--- a/views/club_dashboard.ejs
+++ b/views/club_dashboard.ejs
@@ -450,7 +450,7 @@
             <% } %>
 
   </section>
-
+  
   <section>
 
     <h2 class="club-liveupdate-section-title club-liveupdate-upcoming-title">Upcoming Matches</h2>
@@ -486,8 +486,7 @@
                     <p class="club-liveupdate-note">If you want to edit your setup</p>
                     <% } %>
 
-                      <a href="/match/match_setup/<%= match.matchId._id %>" class="club-liveupdate-btn">Match
-                        Setup</a>
+                      <a href="/match/match_setup/<%= match.matchId._id %>" class="club-liveupdate-btn">Match Setup</a>
 
           </div>
           <% if (match.matchId.setup_club1 && match.matchId.setup_club2) { %>
